--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "nodemon": "^3.0.3",
         "pg": "^8.11.3",
         "sequelize": "^6.37.1",
-        "swagger-ui-express": "^5.0.0"
+        "swagger-autogen": "^2.23.7",
+        "swagger-ui-express": "^5.0.0",
+        "uuid": "^9.0.1"
     }
 }
