hosted DB added

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+DB_URl="postgres://olvxbknj:AZo7Ack0JB5gyaidzNUlQ_YgDR8qCpH5@floppy.db.elephantsql.com/olvxbknj"
 HOST=localhost
 USER=.Split
 DB=.Split
